objects/Participant_Survey_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Anything_to_Share_with_us__c</fullName>
        <label>Other notes:</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Friends_or_Family_Reference_Future_Study__c</fullName>
        <label>Friends or Family Reference Future Study</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Recommended__c</fullName>
        <description>On scale of 1 to 10, NPS to recommend friend or family member to intuit study</description>
        <label>NPS Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Participant</label>
        <referenceTo>Study_Participant__c</referenceTo>
        <relationshipLabel>Participant Surveys Feedback</relationshipLabel>
        <relationshipName>Participant_Surveys_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_did_we_do_really_well__c</fullName>
        <label>What worked, what didn’t work</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_do_in_future_to_get_a_9_or_10__c</fullName>
        <label>Notes to get a 9 or 10 NPS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>